--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.8",
     "@mantine/core": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
+    "@tabler/icons-react": "^2.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
