Connect to client
Co-authored-by: Hampus Isebring <hampus.isebring@medieinstitutet.se>
Co-authored-by: Gabriel Lugo Méndez <gabriel.lugomendez@medieinstitutet.se>
Co-authored-by: Fredrik Thelin <FThelin@users.noreply.github.com>

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@tabler/icons-react": "^2.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0"
+    "react-router-dom": "^6.11.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
