--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
     "@tabler/icons-react": "^2.17.0",
+    "emoji-picker-react": "^4.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
